--- a/home.html
+++ b/home.html
@@ -1,61 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>John Doe - Product Owner</title>
-
   <!-- Bootstrap CSS -->
-
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
+  <title>Portfolio | John Doe</title>
 </head>
-
 <body>
-
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">John Doe</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#skills">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#experience">Experience</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#education">Education</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#projects">Projects</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
-          </li>
-        </ul>
-      </div>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">John Doe</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#skills">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#projects">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact">Contact</a>
+        </li>
+      </ul>
     </div>
   </nav>
 
   <!-- Header -->
   <header class="header">
     <div class="container">
-      <div class="row">
-        <div class="col-md-12">
+      <div class="row align-items-center">
+        <div class="col-md-6">
           <h1>John Doe</h1>
-          <h4>Product Owner</h4>
+          <p>Technology Product Owner</p>
+        </div>
+        <div class="col-md-6 text-right">
+          <img src="https://via.placeholder.com/150" alt="Profile Picture" class="rounded-circle">
         </div>
       </div>
     </div>
@@ -67,10 +55,7 @@
       <div class="row">
         <div class="col-md-12">
           <h2>About Me</h2>
-          <p>I am a highly motivated and experienced product owner with a strong background in technology. I have a
-            proven track record of delivering high-quality products that meet the needs of both internal and external
-            customers. My expertise includes product strategy, product development, user research, and project
-            management.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id quam eget sapien commodo laoreet sit amet nec lorem. Aenean rhoncus felis vel metus aliquam ultricies. Donec iaculis eros at lobortis tincidunt. Sed ac congue nulla, id lacinia arcu. Donec lacinia lectus sit amet ornare pellentesque.</p>
         </div>
       </div>
     </div>
@@ -83,92 +68,52 @@
         <div class="col-md-12">
           <h2>Skills</h2>
           <ul class="list-unstyled">
-            <li>Product strategy</li>
-            <li>Product development</li>
-            <li>User research</li>
-            <li>Project management</li>
-            <li>Agile methodology</li>
-            <li>Team management</li>
+            <li>Agile development</li>
+            <li>Product management</li>
+            <li>Team leadership</li>
+            <li>Project planning and execution</li>
+            <li>Customer relationship management</li>
           </ul>
         </div>
-        </< /div>
-      </div>
-  </section>
-
-  <!-- Experience Section -->
-  <section id="experience" class="experience-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h2>Experience</h2>
-          <div class="experience-item">
-            <h3>Product Owner, XYZ Company</h3>
-            <h4>January 2018 - Present</h4>
-            <ul>
-              <li>Managed the development of several successful products from ideation to launch, resulting in a 30%
-                increase in revenue</li>
-              <li>Conducted user research to gather feedback and inform product decisions</li>
-              <li>Collaborated with cross-functional teams to prioritize features and develop product roadmaps</li>
-              <li>Implemented agile methodology and trained team members on best practices</li>
-            </ul>
-          </div>
-          <div class="experience-item">
-            <h3>Product Manager, ABC Company</h3>
-            <h4>June 2014 - December 2017</h4>
-            <ul>
-              <li>Developed and launched multiple products that generated over $1 million in annual revenue</li>
-              <li>Conducted market research to identify customer needs and inform product decisions</li>
-              <li>Managed cross-functional teams to ensure timely and high-quality product delivery</li>
-              <li>Collaborated with sales and marketing teams to create effective go-to-market strategies</li>
-            </ul>
-          </div>
-        </div>
       </div>
     </div>
   </section>
-
-  <!-- Education Section -->
-  <section id="education" class="education-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h2>Education</h2>
-          <div class="education-item">
-            <h3>Master of Business Administration, University of California, Los Angeles</h3>
-            <h4>September 2012 - June 2014</h4>
-            <p>GPA: 3.9</p>
-          </div>
-          <div class="education-item">
-            <h3>Bachelor of Science in Computer Science, Stanford University</h3>
-            <h4>September 2008 - June 2012</h4>
-            <p>GPA: 3.7</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <!-- Projects Section -->
   <section id="projects" class="projects-section">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <h2>Projects</h2>
-          <div class="project-item">
-            <h3>Product A</h3>
-            <p>A mobile app that helps users track their fitness goals and progress. Developed using React Native and
-              Node.js.</p>
-          </div>
-          <div class="project-item">
-            <h3>Product B</h3>
-            <p>A web application that allows users to easily create and manage their personal budgets. Developed using
-              Angular and Django.</p>
+          <div class="card-deck">
+            <div class="card">
+              <img src="https://via.placeholder.com/350x200" alt="Project Image" class="card-img-top">
+              <div class="card-body">
+                <h5 class="card-title">Project Title 1</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id quam eget sapien commodo laoreet sit amet nec lorem.</p>
+                <a href="#" class="btn btn-primary">Learn More</a>
+              </div>
+            </div>
+            <div class="card">
+              <img src="https://via.placeholder.com/350x200" alt="Project Image" class="card-img-top">
+              <div class="card-body">
+                <h5 class="card-title">Project Title 2</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id quam eget sapien commodo laoreet sit amet nec lorem.</p>
+                <a href="#" class="btn btn-primary">Learn More</a>
+              </div>
+            </div>
+            <div class="card">
+              <img src="https://via.placeholder.com/350x200" alt="Project Image" class="card-img-top">
+              <div class="card-body">
+                <h5 class="card-title">Project Title 3</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id quam eget sapien commodo laoreet sit amet nec lorem.</p>
+                <a href="#" class="btn btn-primary">Learn More</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-
   <!-- Contact Section -->
   <section id="contact" class="contact-section">
     <div class="container">
@@ -182,34 +127,48 @@
             </div>
             <div class="form-group">
               <label for="email">Email address</label>
-              <input type="email" class="form-control" id="email" placeholder="Enter your email">
+              <input type="email" class="form-control" id="email" placeholder="Enter your email address">
             </div>
             <div class="form-group">
               <label for="message">Message</label>
-              <textarea class="form-control" id="message" rows="5"></textarea>
+              <textarea class="form-control" id="message" rows="3" placeholder="Enter your message"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Send Message</button>
           </form>
         </div>
       </div>
     </div>
   </section>
-
-  <!-- Footer Section -->
-  <footer class="footer-section">
+  <!-- Footer -->
+  <footer class="footer">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p>&copy; 2023 Your Name. All rights reserved.</p>
+          <p>&copy; 2023 John Doe. All Rights Reserved.</p>
         </div>
       </div>
     </div>
   </footer>
-
-  <!-- Scripts -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <!-- Smooth Scrolling -->
+  <script>
+    $(function() {
+      $('a[href*="#"]:not([href="#"])').click(function() {
+        if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+          var target = $(this.hash);
+          target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+          if (target.length) {
+            $('html, body').animate({
+              scrollTop: target.offset().top
+            }, 1000);
+            return false;
+          }
+        }
+      });
+    });
+  </script>
 </body>
-
 </html>
