--- a/home.html
+++ b/home.html
@@ -2,173 +2,137 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Your Business Name</title>
+
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="style.css">
-  <title>Portfolio | John Doe</title>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  >
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">John Doe</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
+  <div class="container">
+    <a class="navbar-brand fw-bold" href="#">YourBusiness</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#skills">Skills</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#projects">Projects</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact</a>
-        </li>
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="#features">Features</a></li>
+        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+        <li class="nav-item"><a class="btn btn-primary ms-lg-3" href="#contact">Get Started</a></li>
       </ul>
     </div>
-  </nav>
+  </div>
+</nav>
 
-  <!-- Header -->
-  <header class="header">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-6">
-          <h1>John Doe</h1>
-          <p>Technology Product Owner</p>
-        </div>
-        <div class="col-md-6 text-right">
-          <img src="https://via.placeholder.com/150" alt="Profile Picture" class="rounded-circle">
+<!-- Hero Section -->
+<section class="bg-light text-center py-5" style="margin-top: 72px;">
+  <div class="container">
+    <h1 class="display-5 fw-bold">Grow Your Business Faster</h1>
+    <p class="lead text-muted mt-3">
+      We help businesses increase sales, attract customers, and scale with confidence.
+    </p>
+    <a href="#contact" class="btn btn-primary btn-lg mt-3">
+      Get Started Today
+    </a>
+  </div>
+</section>
+
+<!-- Features -->
+<section id="features" class="py-5">
+  <div class="container">
+    <div class="text-center mb-5">
+      <h2 class="fw-bold">What We Offer</h2>
+      <p class="text-muted">Simple solutions designed for real results</p>
+    </div>
+
+    <div class="row g-4">
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body text-center">
+            <h5 class="card-title">Service One</h5>
+            <p class="card-text">
+              A short description of your main service and how it helps customers.
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-  </header>
 
-  <!-- About Section -->
-  <section id="about" class="about-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h2>About Me</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id quam eget sapien commodo laoreet sit amet nec lorem. Aenean rhoncus felis vel metus aliquam ultricies. Donec iaculis eros at lobortis tincidunt. Sed ac congue nulla, id lacinia arcu. Donec lacinia lectus sit amet ornare pellentesque.</p>
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body text-center">
+            <h5 class="card-title">Service Two</h5>
+            <p class="card-text">
+              Highlight a second key benefit or feature of your business.
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
 
-  <!-- Skills Section -->
-  <section id="skills" class="skills-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h2>Skills</h2>
-          <ul class="list-unstyled">
-            <li>Agile development</li>
-            <li>Product management</li>
-            <li>Team leadership</li>
-            <li>Project planning and execution</li>
-            <li>Customer relationship management</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- Projects Section -->
-  <section id="projects" class="projects-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h2>Projects</h2>
-          <div class="card-deck">
-            <div class="card">
-              <img src="https://via.placeholder.com/350x200" alt="Project Image" class="card-img-top">
-              <div class="card-body">
-                <h5 class="card-title">Project Title 1</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id quam eget sapien commodo laoreet sit amet nec lorem.</p>
-                <a href="#" class="btn btn-primary">Learn More</a>
-              </div>
-            </div>
-            <div class="card">
-              <img src="https://via.placeholder.com/350x200" alt="Project Image" class="card-img-top">
-              <div class="card-body">
-                <h5 class="card-title">Project Title 2</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id quam eget sapien commodo laoreet sit amet nec lorem.</p>
-                <a href="#" class="btn btn-primary">Learn More</a>
-              </div>
-            </div>
-            <div class="card">
-              <img src="https://via.placeholder.com/350x200" alt="Project Image" class="card-img-top">
-              <div class="card-body">
-                <h5 class="card-title">Project Title 3</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id quam eget sapien commodo laoreet sit amet nec lorem.</p>
-                <a href="#" class="btn btn-primary">Learn More</a>
-              </div>
-            </div>
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body text-center">
+            <h5 class="card-title">Service Three</h5>
+            <p class="card-text">
+              Explain another reason customers should choose you.
+            </p>
           </div>
         </div>
       </div>
     </div>
-  </section>
-  <!-- Contact Section -->
-  <section id="contact" class="contact-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h2>Contact Me</h2>
-          <form>
-            <div class="form-group">
-              <label for="name">Name</label>
-              <input type="text" class="form-control" id="name" placeholder="Enter your name">
-            </div>
-            <div class="form-group">
-              <label for="email">Email address</label>
-              <input type="email" class="form-control" id="email" placeholder="Enter your email address">
-            </div>
-            <div class="form-group">
-              <label for="message">Message</label>
-              <textarea class="form-control" id="message" rows="3" placeholder="Enter your message"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Send Message</button>
-          </form>
-        </div>
+  </div>
+</section>
+
+<!-- About -->
+<section id="about" class="bg-light py-5">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md-6 mb-4 mb-md-0">
+        <h2 class="fw-bold">About Our Business</h2>
+        <p class="text-muted">
+          Briefly explain who you are, what you do, and why your business exists.
+          Keep it human and focused on your customers.
+        </p>
+      </div>
+      <div class="col-md-6 text-center">
+        <img
+          src="https://via.placeholder.com/450x300"
+          alt="About image"
+          class="img-fluid rounded shadow-sm"
+        >
       </div>
     </div>
-  </section>
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <p>&copy; 2023 John Doe. All Rights Reserved.</p>
-        </div>
-      </div>
-    </div>
-  </footer>
-  <!-- Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <!-- Smooth Scrolling -->
-  <script>
-    $(function() {
-      $('a[href*="#"]:not([href="#"])').click(function() {
-        if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
-          var target = $(this.hash);
-          target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-          if (target.length) {
-            $('html, body').animate({
-              scrollTop: target.offset().top
-            }, 1000);
-            return false;
-          }
-        }
-      });
-    });
-  </script>
+  </div>
+</section>
+
+<!-- Call to Action -->
+<section id="contact" class="py-5 text-center">
+  <div class="container">
+    <h2 class="fw-bold">Ready to Get Started?</h2>
+    <p class="text-muted mt-2">
+      Contact us today and see how we can help your business grow.
+    </p>
+    <a href="mailto:youremail@example.com" class="btn btn-primary btn-lg mt-3">
+      Contact Us
+    </a>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer class="bg-dark text-white py-4">
+  <div class="container text-center">
+    <p class="mb-0">
+      © 2026 Your Business Name. All rights reserved.
+    </p>
+  </div>
+</footer>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
