--- a/home.html
+++ b/home.html
@@ -48,16 +48,16 @@
   <div class="container">
     <div class="text-center mb-5">
       <h2 class="fw-bold">What We Offer</h2>
-      <p class="text-muted">Simple solutions designed for real results</p>
+      <p class="text-muted">Complete property solutions for businesses and homeowners</p>
     </div>
 
     <div class="row g-4">
       <div class="col-md-4">
         <div class="card h-100 shadow-sm">
           <div class="card-body text-center">
-            <h5 class="card-title">Service One</h5>
+            <h5 class="card-title">Commercial Rental Properties</h5>
             <p class="card-text">
-              A short description of your main service and how it helps customers.
+              Office, retail, and industrial spaces designed to support business growth and long-term success.
             </p>
           </div>
         </div>
@@ -66,9 +66,9 @@
       <div class="col-md-4">
         <div class="card h-100 shadow-sm">
           <div class="card-body text-center">
-            <h5 class="card-title">Service Two</h5>
+            <h5 class="card-title">Residential Rental Properties</h5>
             <p class="card-text">
-              Highlight a second key benefit or feature of your business.
+              Quality homes and apartments that provide comfort, reliability, and peace of mind for tenants.
             </p>
           </div>
         </div>
@@ -77,9 +77,9 @@
       <div class="col-md-4">
         <div class="card h-100 shadow-sm">
           <div class="card-body text-center">
-            <h5 class="card-title">Service Three</h5>
+            <h5 class="card-title">Renovations</h5>
             <p class="card-text">
-              Explain another reason customers should choose you.
+              Expert renovation services delivering modern upgrades, solid craftsmanship, and increased property value.
             </p>
           </div>
         </div>
